parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    ASSERT
    ASYNC
    AWAIT
    BLOCKCOMMENT
    BREAK
    CASE
    CATCH
    COLON
    COMMENT
    CONTINUE
    DEFAULT
    DEFERRED
    DO
    DOT
    ENUM
    EXPORT
    EXTENDS
    EXTENSION
    EXTERNAL
    FINALLY
    FOR
    GET
    HIDE
    IMPLEMENTS
    IMPORT
    IN
    INTERFACE
    IS
    KEYWORD
    LIBRARY
    NULL
    ON
    OPERATOR
    PART
    RETHROW
    RETURN
    SET
    SHOW
    STATIC
    SUPER
    SWITCH
    SYNC
    THROW
    TRY
    TYPEDEF
    WHILE
    WITH
    YIELD

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> assignment
Rule 3     statement -> print
Rule 4     statement -> function
Rule 5     statement -> if_statement
Rule 6     statement -> lines
Rule 7     statement -> <empty>
Rule 8     assignment -> modifier type nullable IDENTIFIER ASSIGN expression SEMICOLON
Rule 9     assignment -> type nullable IDENTIFIER ASSIGN expression SEMICOLON
Rule 10    assignment -> modifier type IDENTIFIER ASSIGN expression SEMICOLON
Rule 11    assignment -> type IDENTIFIER ASSIGN expression SEMICOLON
Rule 12    nullable -> QUESTION_MARK
Rule 13    modifier -> LATE
Rule 14    modifier -> FINAL
Rule 15    modifier -> CONST
Rule 16    print -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 17    print -> PRINT LPAREN RPAREN SEMICOLON
Rule 18    if_statement -> IF LPAREN logic RPAREN LBRACE lines RBRACE
Rule 19    if_statement -> if_statement ELSE if_statement
Rule 20    if_statement -> if_statement ELSE LBRACE lines RBRACE
Rule 21    function_call -> IDENTIFIER LPAREN parameters RPAREN
Rule 22    type -> INTEGER_TYPE
Rule 23    type -> DOUBLE_TYPE
Rule 24    type -> BOOLEAN_TYPE
Rule 25    type -> QUEUE_TYPE
Rule 26    type -> STRING_TYPE
Rule 27    type -> ENUM_TYPE
Rule 28    type -> VAR
Rule 29    type -> LIST_TYPE
Rule 30    type -> MAP_TYPE
Rule 31    type -> SET_TYPE
Rule 32    type -> DYNAMIC_TYPE
Rule 33    expression -> arithmetic
Rule 34    expression -> logic
Rule 35    expression -> function_call
Rule 36    arithmetic -> value
Rule 37    arithmetic -> arithmetic arith_op arithmetic
Rule 38    arithmetic -> LPAREN arithmetic arith_op arithmetic RPAREN
Rule 39    comparison -> value
Rule 40    comparison -> boolean
Rule 41    comparison -> comparison comp_op comparison
Rule 42    comparison -> LPAREN comparison comp_op comparison RPAREN
Rule 43    logic -> comparison
Rule 44    logic -> logic logic_op logic
Rule 45    logic -> LPAREN logic logic_op logic RPAREN
Rule 46    logic -> LOGICAL_NOT logic
Rule 47    logic_op -> LOGICAL_AND
Rule 48    logic_op -> LOGICAL_OR
Rule 49    arith_op -> PLUS
Rule 50    arith_op -> MINUS
Rule 51    arith_op -> TIMES
Rule 52    arith_op -> DIVIDE
Rule 53    comp_op -> EQUAL
Rule 54    comp_op -> NOT_EQUAL
Rule 55    comp_op -> LESS
Rule 56    comp_op -> LESS_EQUAL
Rule 57    comp_op -> GREATER
Rule 58    comp_op -> GREATER_EQUAL
Rule 59    values -> value
Rule 60    values -> value COMMA values
Rule 61    value -> IDENTIFIER
Rule 62    value -> number
Rule 63    value -> string
Rule 64    value -> list
Rule 65    number -> INTEGER
Rule 66    number -> DOUBLE
Rule 67    string -> STRING
Rule 68    boolean -> TRUE
Rule 69    boolean -> FALSE
Rule 70    list -> LSQUARE RSQUARE
Rule 71    list -> LSQUARE values RSQUARE
Rule 72    function -> type IDENTIFIER LPAREN parameters RPAREN LBRACE lines RBRACE
Rule 73    lines -> line LINE_BREAK
Rule 74    lines -> line
Rule 75    lines -> <empty>
Rule 76    line -> print
Rule 77    line -> assignment
Rule 78    line -> function
Rule 79    line -> if_statement
Rule 80    parameters -> VOID
Rule 81    parameters -> parameter
Rule 82    parameters -> parameter COMMA parameters
Rule 83    parameters -> <empty>
Rule 84    parameter -> type IDENTIFIER

Terminals, with rules where they appear

ABSTRACT             : 
AS                   : 
ASSERT               : 
ASSIGN               : 8 9 10 11
ASYNC                : 
AWAIT                : 
BLOCKCOMMENT         : 
BOOLEAN_TYPE         : 24
BREAK                : 
CASE                 : 
CATCH                : 
COLON                : 
COMMA                : 60 82
COMMENT              : 
CONST                : 15
CONTINUE             : 
DEFAULT              : 
DEFERRED             : 
DIVIDE               : 52
DO                   : 
DOT                  : 
DOUBLE               : 66
DOUBLE_TYPE          : 23
DYNAMIC_TYPE         : 32
ELSE                 : 19 20
ENUM                 : 
ENUM_TYPE            : 27
EQUAL                : 53
EXPORT               : 
EXTENDS              : 
EXTENSION            : 
EXTERNAL             : 
FALSE                : 69
FINAL                : 14
FINALLY              : 
FOR                  : 
GET                  : 
GREATER              : 57
GREATER_EQUAL        : 58
HIDE                 : 
IDENTIFIER           : 8 9 10 11 21 61 72 84
IF                   : 18
IMPLEMENTS           : 
IMPORT               : 
IN                   : 
INTEGER              : 65
INTEGER_TYPE         : 22
INTERFACE            : 
IS                   : 
KEYWORD              : 
LATE                 : 13
LBRACE               : 18 20 72
LESS                 : 55
LESS_EQUAL           : 56
LIBRARY              : 
LINE_BREAK           : 73
LIST_TYPE            : 29
LOGICAL_AND          : 47
LOGICAL_NOT          : 46
LOGICAL_OR           : 48
LPAREN               : 16 17 18 21 38 42 45 72
LSQUARE              : 70 71
MAP_TYPE             : 30
MINUS                : 50
NOT_EQUAL            : 54
NULL                 : 
ON                   : 
OPERATOR             : 
PART                 : 
PLUS                 : 49
PRINT                : 16 17
QUESTION_MARK        : 12
QUEUE_TYPE           : 25
RBRACE               : 18 20 72
RETHROW              : 
RETURN               : 
RPAREN               : 16 17 18 21 38 42 45 72
RSQUARE              : 70 71
SEMICOLON            : 8 9 10 11 16 17
SET                  : 
SET_TYPE             : 31
SHOW                 : 
STATIC               : 
STRING               : 67
STRING_TYPE          : 26
SUPER                : 
SWITCH               : 
SYNC                 : 
THROW                : 
TIMES                : 51
TRUE                 : 68
TRY                  : 
TYPEDEF              : 
VAR                  : 28
VOID                 : 80
WHILE                : 
WITH                 : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

arith_op             : 37 38
arithmetic           : 33 37 37 38 38
assignment           : 2 77
boolean              : 40
comp_op              : 41 42
comparison           : 41 41 42 42 43
expression           : 1 8 9 10 11 16
function             : 4 78
function_call        : 35
if_statement         : 5 19 19 20 79
line                 : 73 74
lines                : 6 18 20 72
list                 : 64
logic                : 18 34 44 44 45 45 46
logic_op             : 44 45
modifier             : 8 10
nullable             : 8 9
number               : 62
parameter            : 81 82
parameters           : 21 72 82
print                : 3 76
statement            : 0
string               : 63
type                 : 8 9 10 11 72 84
value                : 36 39 59 60
values               : 60 71

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . assignment
    (3) statement -> . print
    (4) statement -> . function
    (5) statement -> . if_statement
    (6) statement -> . lines
    (7) statement -> .
    (33) expression -> . arithmetic
    (34) expression -> . logic
    (35) expression -> . function_call
    (8) assignment -> . modifier type nullable IDENTIFIER ASSIGN expression SEMICOLON
    (9) assignment -> . type nullable IDENTIFIER ASSIGN expression SEMICOLON
    (10) assignment -> . modifier type IDENTIFIER ASSIGN expression SEMICOLON
    (11) assignment -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (16) print -> . PRINT LPAREN expression RPAREN SEMICOLON
    (17) print -> . PRINT LPAREN RPAREN SEMICOLON
    (72) function -> . type IDENTIFIER LPAREN parameters RPAREN LBRACE lines RBRACE
    (18) if_statement -> . IF LPAREN logic RPAREN LBRACE lines RBRACE
    (19) if_statement -> . if_statement ELSE if_statement
    (20) if_statement -> . if_statement ELSE LBRACE lines RBRACE
    (73) lines -> . line LINE_BREAK
    (74) lines -> . line
    (75) lines -> .
    (36) arithmetic -> . value
    (37) arithmetic -> . arithmetic arith_op arithmetic
    (38) arithmetic -> . LPAREN arithmetic arith_op arithmetic RPAREN
    (43) logic -> . comparison
    (44) logic -> . logic logic_op logic
    (45) logic -> . LPAREN logic logic_op logic RPAREN
    (46) logic -> . LOGICAL_NOT logic
    (21) function_call -> . IDENTIFIER LPAREN parameters RPAREN
    (13) modifier -> . LATE
    (14) modifier -> . FINAL
    (15) modifier -> . CONST
    (22) type -> . INTEGER_TYPE
    (23) type -> . DOUBLE_TYPE
    (24) type -> . BOOLEAN_TYPE
    (25) type -> . QUEUE_TYPE
    (26) type -> . STRING_TYPE
    (27) type -> . ENUM_TYPE
    (28) type -> . VAR
    (29) type -> . LIST_TYPE
    (30) type -> . MAP_TYPE
    (31) type -> . SET_TYPE
    (32) type -> . DYNAMIC_TYPE
    (76) line -> . print
    (77) line -> . assignment
    (78) line -> . function
    (79) line -> . if_statement
    (61) value -> . IDENTIFIER
    (62) value -> . number
    (63) value -> . string
    (64) value -> . list
    (39) comparison -> . value
    (40) comparison -> . boolean
    (41) comparison -> . comparison comp_op comparison
    (42) comparison -> . LPAREN comparison comp_op comparison RPAREN
    (65) number -> . INTEGER
    (66) number -> . DOUBLE
    (67) string -> . STRING
    (70) list -> . LSQUARE RSQUARE
    (71) list -> . LSQUARE values RSQUARE
    (68) boolean -> . TRUE
    (69) boolean -> . FALSE

  ! reduce/reduce conflict for $end resolved using rule 7 (statement -> .)
    $end            reduce using rule 7 (statement -> .)
    PRINT           shift and go to state 14
    IF              shift and go to state 16
    LPAREN          shift and go to state 15
    LOGICAL_NOT     shift and go to state 20
    IDENTIFIER      shift and go to state 13
    LATE            shift and go to state 21
    FINAL           shift and go to state 22
    CONST           shift and go to state 23
    INTEGER_TYPE    shift and go to state 24
    DOUBLE_TYPE     shift and go to state 25
    BOOLEAN_TYPE    shift and go to state 26
    QUEUE_TYPE      shift and go to state 27
    STRING_TYPE     shift and go to state 28
    ENUM_TYPE       shift and go to state 29
    VAR             shift and go to state 30
    LIST_TYPE       shift and go to state 31
    MAP_TYPE        shift and go to state 32
    SET_TYPE        shift and go to state 33
    DYNAMIC_TYPE    shift and go to state 34
    INTEGER         shift and go to state 39
    DOUBLE          shift and go to state 40
    STRING          shift and go to state 41
    LSQUARE         shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

  ! $end            [ reduce using rule 75 (lines -> .) ]

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    assignment                     shift and go to state 3
    print                          shift and go to state 4
    function                       shift and go to state 5
    if_statement                   shift and go to state 6
    lines                          shift and go to state 7
    arithmetic                     shift and go to state 8
    logic                          shift and go to state 9
    function_call                  shift and go to state 10
    modifier                       shift and go to state 11
    type                           shift and go to state 12
    line                           shift and go to state 17
    value                          shift and go to state 18
    comparison                     shift and go to state 19
    number                         shift and go to state 35
    string                         shift and go to state 36
    list                           shift and go to state 37
    boolean                        shift and go to state 38

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression .

    $end            reduce using rule 1 (statement -> expression .)


state 3

    (2) statement -> assignment .
    (77) line -> assignment .

  ! reduce/reduce conflict for $end resolved using rule 2 (statement -> assignment .)
    $end            reduce using rule 2 (statement -> assignment .)
    LINE_BREAK      reduce using rule 77 (line -> assignment .)

  ! $end            [ reduce using rule 77 (line -> assignment .) ]


state 4

    (3) statement -> print .
    (76) line -> print .

  ! reduce/reduce conflict for $end resolved using rule 3 (statement -> print .)
    $end            reduce using rule 3 (statement -> print .)
    LINE_BREAK      reduce using rule 76 (line -> print .)

  ! $end            [ reduce using rule 76 (line -> print .) ]


state 5

    (4) statement -> function .
    (78) line -> function .

  ! reduce/reduce conflict for $end resolved using rule 4 (statement -> function .)
    $end            reduce using rule 4 (statement -> function .)
    LINE_BREAK      reduce using rule 78 (line -> function .)

  ! $end            [ reduce using rule 78 (line -> function .) ]


state 6

    (5) statement -> if_statement .
    (19) if_statement -> if_statement . ELSE if_statement
    (20) if_statement -> if_statement . ELSE LBRACE lines RBRACE
    (79) line -> if_statement .

  ! reduce/reduce conflict for $end resolved using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    ELSE            shift and go to state 45
    LINE_BREAK      reduce using rule 79 (line -> if_statement .)

  ! $end            [ reduce using rule 79 (line -> if_statement .) ]


state 7

    (6) statement -> lines .

    $end            reduce using rule 6 (statement -> lines .)


state 8

    (33) expression -> arithmetic .
    (37) arithmetic -> arithmetic . arith_op arithmetic
    (49) arith_op -> . PLUS
    (50) arith_op -> . MINUS
    (51) arith_op -> . TIMES
    (52) arith_op -> . DIVIDE

    $end            reduce using rule 33 (expression -> arithmetic .)
    RPAREN          reduce using rule 33 (expression -> arithmetic .)
    SEMICOLON       reduce using rule 33 (expression -> arithmetic .)
    PLUS            shift and go to state 47
    MINUS           shift and go to state 48
    TIMES           shift and go to state 49
    DIVIDE          shift and go to state 50

    arith_op                       shift and go to state 46

state 9

    (34) expression -> logic .
    (44) logic -> logic . logic_op logic
    (47) logic_op -> . LOGICAL_AND
    (48) logic_op -> . LOGICAL_OR

    $end            reduce using rule 34 (expression -> logic .)
    RPAREN          reduce using rule 34 (expression -> logic .)
    SEMICOLON       reduce using rule 34 (expression -> logic .)
    LOGICAL_AND     shift and go to state 52
    LOGICAL_OR      shift and go to state 53

    logic_op                       shift and go to state 51

state 10

    (35) expression -> function_call .

    $end            reduce using rule 35 (expression -> function_call .)
    RPAREN          reduce using rule 35 (expression -> function_call .)
    SEMICOLON       reduce using rule 35 (expression -> function_call .)


state 11

    (8) assignment -> modifier . type nullable IDENTIFIER ASSIGN expression SEMICOLON
    (10) assignment -> modifier . type IDENTIFIER ASSIGN expression SEMICOLON
    (22) type -> . INTEGER_TYPE
    (23) type -> . DOUBLE_TYPE
    (24) type -> . BOOLEAN_TYPE
    (25) type -> . QUEUE_TYPE
    (26) type -> . STRING_TYPE
    (27) type -> . ENUM_TYPE
    (28) type -> . VAR
    (29) type -> . LIST_TYPE
    (30) type -> . MAP_TYPE
    (31) type -> . SET_TYPE
    (32) type -> . DYNAMIC_TYPE

    INTEGER_TYPE    shift and go to state 24
    DOUBLE_TYPE     shift and go to state 25
    BOOLEAN_TYPE    shift and go to state 26
    QUEUE_TYPE      shift and go to state 27
    STRING_TYPE     shift and go to state 28
    ENUM_TYPE       shift and go to state 29
    VAR             shift and go to state 30
    LIST_TYPE       shift and go to state 31
    MAP_TYPE        shift and go to state 32
    SET_TYPE        shift and go to state 33
    DYNAMIC_TYPE    shift and go to state 34

    type                           shift and go to state 54

state 12

    (9) assignment -> type . nullable IDENTIFIER ASSIGN expression SEMICOLON
    (11) assignment -> type . IDENTIFIER ASSIGN expression SEMICOLON
    (72) function -> type . IDENTIFIER LPAREN parameters RPAREN LBRACE lines RBRACE
    (12) nullable -> . QUESTION_MARK

    IDENTIFIER      shift and go to state 56
    QUESTION_MARK   shift and go to state 57

    nullable                       shift and go to state 55

state 13

    (21) function_call -> IDENTIFIER . LPAREN parameters RPAREN
    (61) value -> IDENTIFIER .

    LPAREN          shift and go to state 58
    PLUS            reduce using rule 61 (value -> IDENTIFIER .)
    MINUS           reduce using rule 61 (value -> IDENTIFIER .)
    TIMES           reduce using rule 61 (value -> IDENTIFIER .)
    DIVIDE          reduce using rule 61 (value -> IDENTIFIER .)
    $end            reduce using rule 61 (value -> IDENTIFIER .)
    EQUAL           reduce using rule 61 (value -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 61 (value -> IDENTIFIER .)
    LESS            reduce using rule 61 (value -> IDENTIFIER .)
    LESS_EQUAL      reduce using rule 61 (value -> IDENTIFIER .)
    GREATER         reduce using rule 61 (value -> IDENTIFIER .)
    GREATER_EQUAL   reduce using rule 61 (value -> IDENTIFIER .)
    LOGICAL_AND     reduce using rule 61 (value -> IDENTIFIER .)
    LOGICAL_OR      reduce using rule 61 (value -> IDENTIFIER .)
    RPAREN          reduce using rule 61 (value -> IDENTIFIER .)
    SEMICOLON       reduce using rule 61 (value -> IDENTIFIER .)


state 14

    (16) print -> PRINT . LPAREN expression RPAREN SEMICOLON
    (17) print -> PRINT . LPAREN RPAREN SEMICOLON

    LPAREN          shift and go to state 59


state 15

    (38) arithmetic -> LPAREN . arithmetic arith_op arithmetic RPAREN
    (45) logic -> LPAREN . logic logic_op logic RPAREN
    (42) comparison -> LPAREN . comparison comp_op comparison RPAREN
    (36) arithmetic -> . value
    (37) arithmetic -> . arithmetic arith_op arithmetic
    (38) arithmetic -> . LPAREN arithmetic arith_op arithmetic RPAREN
    (43) logic -> . comparison
    (44) logic -> . logic logic_op logic
    (45) logic -> . LPAREN logic logic_op logic RPAREN
    (46) logic -> . LOGICAL_NOT logic
    (39) comparison -> . value
    (40) comparison -> . boolean
    (41) comparison -> . comparison comp_op comparison
    (42) comparison -> . LPAREN comparison comp_op comparison RPAREN
    (61) value -> . IDENTIFIER
    (62) value -> . number
    (63) value -> . string
    (64) value -> . list
    (68) boolean -> . TRUE
    (69) boolean -> . FALSE
    (65) number -> . INTEGER
    (66) number -> . DOUBLE
    (67) string -> . STRING
    (70) list -> . LSQUARE RSQUARE
    (71) list -> . LSQUARE values RSQUARE

    LPAREN          shift and go to state 15
    LOGICAL_NOT     shift and go to state 20
    IDENTIFIER      shift and go to state 63
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    INTEGER         shift and go to state 39
    DOUBLE          shift and go to state 40
    STRING          shift and go to state 41
    LSQUARE         shift and go to state 42

    arithmetic                     shift and go to state 60
    logic                          shift and go to state 61
    comparison                     shift and go to state 62
    value                          shift and go to state 18
    boolean                        shift and go to state 38
    number                         shift and go to state 35
    string                         shift and go to state 36
    list                           shift and go to state 37

state 16

    (18) if_statement -> IF . LPAREN logic RPAREN LBRACE lines RBRACE

    LPAREN          shift and go to state 64


state 17

    (73) lines -> line . LINE_BREAK
    (74) lines -> line .

    LINE_BREAK      shift and go to state 65
    $end            reduce using rule 74 (lines -> line .)
    RBRACE          reduce using rule 74 (lines -> line .)


state 18

    (36) arithmetic -> value .
    (39) comparison -> value .

  ! reduce/reduce conflict for $end resolved using rule 36 (arithmetic -> value .)
  ! reduce/reduce conflict for RPAREN resolved using rule 36 (arithmetic -> value .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 36 (arithmetic -> value .)
    PLUS            reduce using rule 36 (arithmetic -> value .)
    MINUS           reduce using rule 36 (arithmetic -> value .)
    TIMES           reduce using rule 36 (arithmetic -> value .)
    DIVIDE          reduce using rule 36 (arithmetic -> value .)
    $end            reduce using rule 36 (arithmetic -> value .)
    RPAREN          reduce using rule 36 (arithmetic -> value .)
    SEMICOLON       reduce using rule 36 (arithmetic -> value .)
    EQUAL           reduce using rule 39 (comparison -> value .)
    NOT_EQUAL       reduce using rule 39 (comparison -> value .)
    LESS            reduce using rule 39 (comparison -> value .)
    LESS_EQUAL      reduce using rule 39 (comparison -> value .)
    GREATER         reduce using rule 39 (comparison -> value .)
    GREATER_EQUAL   reduce using rule 39 (comparison -> value .)
    LOGICAL_AND     reduce using rule 39 (comparison -> value .)
    LOGICAL_OR      reduce using rule 39 (comparison -> value .)

  ! $end            [ reduce using rule 39 (comparison -> value .) ]
  ! RPAREN          [ reduce using rule 39 (comparison -> value .) ]
  ! SEMICOLON       [ reduce using rule 39 (comparison -> value .) ]


state 19

    (43) logic -> comparison .
    (41) comparison -> comparison . comp_op comparison
    (53) comp_op -> . EQUAL
    (54) comp_op -> . NOT_EQUAL
    (55) comp_op -> . LESS
    (56) comp_op -> . LESS_EQUAL
    (57) comp_op -> . GREATER
    (58) comp_op -> . GREATER_EQUAL

    LOGICAL_AND     reduce using rule 43 (logic -> comparison .)
    LOGICAL_OR      reduce using rule 43 (logic -> comparison .)
    $end            reduce using rule 43 (logic -> comparison .)
    RPAREN          reduce using rule 43 (logic -> comparison .)
    SEMICOLON       reduce using rule 43 (logic -> comparison .)
    EQUAL           shift and go to state 67
    NOT_EQUAL       shift and go to state 68
    LESS            shift and go to state 69
    LESS_EQUAL      shift and go to state 70
    GREATER         shift and go to state 71
    GREATER_EQUAL   shift and go to state 72

    comp_op                        shift and go to state 66

state 20

    (46) logic -> LOGICAL_NOT . logic
    (43) logic -> . comparison
    (44) logic -> . logic logic_op logic
    (45) logic -> . LPAREN logic logic_op logic RPAREN
    (46) logic -> . LOGICAL_NOT logic
    (39) comparison -> . value
    (40) comparison -> . boolean
